kubernetes/99-argocd/99-deleted/12-deleted-stack-auth-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-auth
  namespace: six-degrees-apps
spec:
  selector:
    matchLabels:
      app: stack-auth
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stack-auth
    spec:
      containers:
      - name: stack-auth
        image: stackauth/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8102
        - containerPort: 8101
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
